<resources>
    <string name="app_name">Popular Movies</string>
    <string name="poster_image_content_description">Movie poster</string>
    <string name="rating">User Rating</string>
    <string name="release_date">Release Date</string>
    <string name="sort_by">Sort By</string>
    <string name="top_rated">Top Rated</string>
    <string name="most_popular">Most Popular</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews">No Reviews To Show…</string>
    <string name="trailers">Trailers</string>
    <string name="no_trailers">No Trailers To Show…</string>
    <string name="favorite">Favorite</string>
    <string name="un_favorite">Un-Favorite</string>
    <string name="no_movies">No Movies To Show…</string>
</resources>
